--- a/cuentas_por_cobrar.html
+++ b/cuentas_por_cobrar.html
@@ -65,18 +65,23 @@
     <div id="sidebar-container"></div>
 
     <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0">
-        <header class="flex justify-between items-center">
+        <header class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 lg:gap-0">
             <div>
-                <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Cuentas por Cobrar</h1>
-                <p class="text-gray-400 font-medium">Monitoreo y gestión de saldos pendientes de Agrigarden</p>
+                <nav class="text-[10px] font-bold text-gray-400 uppercase tracking-widest mb-1">Inicio > Créditos</nav>
+                <h1 class="text-3xl lg:text-3xl font-extrabold tracking-tight italic uppercase">Cuentas por Cobrar
+                </h1>
+                <p class="text-gray-500 text-sm font-medium">Monitoreo y gestión de saldos pendientes de Agrigarden
+                </p>
             </div>
-            <div class="flex items-center gap-4">
-                <button onclick="sincronizarPagosHistoricos()" id="btnSyncHistory"
-                    class="bg-black text-white px-5 py-3 rounded-xl font-bold flex items-center gap-2 text-sm hover:bg-gray-800 transition-all shadow-lg shadow-black/20">
-                    <span class="material-symbols-outlined text-lg">history</span> Sincronizar Historial
+            <div class="flex flex-col lg:flex-row gap-3 w-full lg:w-auto">
+                <button onclick="sincronizarHistorialCreditos()"
+                    class="w-full lg:w-auto bg-black text-white px-6 py-3 rounded-xl font-black flex items-center justify-center gap-2 text-xs shadow-lg hover:scale-105 transition-transform group">
+                    <span
+                        class="material-symbols-outlined text-lg group-hover:rotate-180 transition-transform duration-500">sync</span>
+                    <span class="text-center">Sincronizar<br>Historial</span>
                 </button>
-                <button onclick="exportarCobranza()"
-                    class="bg-white border border-gray-300 px-5 py-3 rounded-xl font-bold flex items-center gap-2 text-sm hover:bg-gray-50 transition-all shadow-sm">
+                <button onclick="exportarCuentas()"
+                    class="w-full lg:w-auto bg-white border-2 border-gray-100 text-gray-600 px-6 py-3 rounded-xl font-bold flex items-center justify-center gap-2 text-xs hover:border-gray-200 transition-all">
                     <span class="material-symbols-outlined text-lg">download</span> Exportar
                 </button>
             </div>
