--- a/estado_resultados.html
+++ b/estado_resultados.html
@@ -92,20 +92,20 @@
 
     <!-- MAIN CONTENT -->
     <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
-        <header class="flex justify-between items-center">
+        <header class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 lg:gap-0">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Estado de Resultados</h1>
                 <p class="text-gray-400 font-medium">Análisis financiero mensual y anual por sucursal</p>
             </div>
 
-            <div class="flex gap-3 items-center">
+            <div class="flex flex-col sm:flex-row gap-3 items-stretch sm:items-center w-full lg:w-auto">
                 <select id="filtroAnio" onchange="cargarEstadoResultados()"
-                    class="bg-white border border-gray-200 rounded-xl px-4 py-2 text-sm font-bold focus:outline-none">
+                    class="bg-white border border-gray-200 rounded-xl px-4 py-3 text-sm font-bold focus:outline-none w-full sm:w-auto">
                     <option value="2026">2026</option>
                     <option value="2025">2025</option>
                 </select>
                 <button id="btnCerrarMes" onclick="cerrarMesActual()"
-                    class="bg-emerald-600 text-white px-5 py-2.5 rounded-xl font-bold text-sm shadow-lg shadow-emerald-200 hover:bg-emerald-700 transition-all flex items-center gap-2 hidden">
+                    class="bg-emerald-600 text-white px-5 py-3 rounded-xl font-bold text-sm shadow-lg shadow-emerald-200 hover:bg-emerald-700 transition-all flex items-center justify-center gap-2 hidden w-full sm:w-auto">
                     <span class="material-symbols-outlined text-lg">lock</span> Cerrar Mes
                 </button>
             </div>
@@ -126,7 +126,8 @@
         <section class="space-y-4" id="resumenAnualSection">
             <h3 class="font-extrabold text-sm uppercase tracking-widest text-gray-500">Resumen Anual Acumulado</h3>
             <div id="resumenAnualContainer" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                <div class="text-center p-4 lg:p-10 text-gray-400 italic col-span-full">Selecciona un año para ver el acumulado
+                <div class="text-center p-4 lg:p-10 text-gray-400 italic col-span-full">Selecciona un año para ver el
+                    acumulado
                 </div>
             </div>
         </section>
