--- a/inventario.html
+++ b/inventario.html
@@ -59,19 +59,20 @@
 
     <!-- MAIN CONTENT -->
     <main class="pt-20 lg:pt-0 flex-1  p-4 lg:p-10 space-y-8 min-w-0 overflow-y-auto">
-        <header class="flex justify-between items-center">
+        <header class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 lg:gap-0">
             <div>
-                <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Inventario Mensual</h1>
-                <p class="text-gray-400 font-medium">Registro de valor de inventario al inicio y fin de mes</p>
+                <h1 class="text-3xl lg:text-4xl font-extrabold tracking-tight italic uppercase">Inventario Mensual</h1>
+                <p class="text-gray-400 font-medium text-sm lg:text-base">Registro de valor de inventario al inicio y
+                    fin de mes</p>
             </div>
 
-            <div class="flex gap-2">
+            <div class="flex flex-col sm:flex-row gap-2 w-full lg:w-auto">
                 <button onclick="exportarInventario()"
-                    class="bg-white border border-gray-200 px-6 py-3 rounded-xl font-bold text-sm shadow-sm hover:bg-gray-50 flex items-center gap-2">
+                    class="bg-white border border-gray-200 px-6 py-3 rounded-xl font-bold text-sm shadow-sm hover:bg-gray-50 flex items-center justify-center gap-2 w-full lg:w-auto">
                     <span class="material-symbols-outlined text-lg">download</span> Exportar
                 </button>
                 <button onclick="abrirModal()"
-                    class="btn-primary flex items-center gap-3 px-6 py-3 rounded-xl font-bold text-sm shadow-xl shadow-gray-200">
+                    class="btn-primary flex items-center justify-center gap-3 px-6 py-3 rounded-xl font-bold text-sm shadow-xl shadow-gray-200 w-full lg:w-auto">
                     <span class="material-symbols-outlined text-xl">add</span> Registrar Mes
                 </button>
             </div>
@@ -90,23 +91,28 @@
 
         <!-- HISTÓRICO DE INVENTARIO -->
         <section class="space-y-4">
-            <div class="flex justify-between items-center">
+            <div class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4">
                 <h3 class="font-extrabold text-sm uppercase tracking-widest text-gray-500">Histórico de Inventario</h3>
-                <div class="flex items-center gap-2 bg-white rounded-xl px-4 py-2 shadow-sm border border-gray-100">
-                    <span class="material-symbols-outlined text-gray-400 text-sm">filter_list</span>
-                    <select id="filtroSucursal" onchange="cargarInventario()"
-                        class="bg-transparent text-xs font-bold text-gray-600 focus:outline-none uppercase">
-                        <option value="Todos">Todas las Sucursales</option>
-                        <option value="Matriz">Matriz</option>
-                        <option value="Norte">Norte</option>
-                        <option value="Sur">Sur</option>
-                    </select>
-                    <div class="w-px h-4 bg-gray-300 mx-1"></div>
-                    <select id="filtroYear" onchange="cargarInventario()"
-                        class="bg-transparent text-xs font-bold text-gray-600 focus:outline-none">
-                        <option value="2026">2026</option>
-                        <option value="2025">2025</option>
-                    </select>
+                <div
+                    class="flex items-center gap-2 bg-white rounded-xl px-4 py-2 shadow-sm border border-gray-100 w-full lg:w-auto justify-between lg:justify-start">
+                    <div class="flex items-center gap-2">
+                        <span class="material-symbols-outlined text-gray-400 text-sm">filter_list</span>
+                        <select id="filtroSucursal" onchange="cargarInventario()"
+                            class="bg-transparent text-xs font-bold text-gray-600 focus:outline-none uppercase">
+                            <option value="Todos">Todas las Sucursales</option>
+                            <option value="Matriz">Matriz</option>
+                            <option value="Norte">Norte</option>
+                            <option value="Sur">Sur</option>
+                        </select>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <div class="w-px h-4 bg-gray-300 mx-1"></div>
+                        <select id="filtroYear" onchange="cargarInventario()"
+                            class="bg-transparent text-xs font-bold text-gray-600 focus:outline-none">
+                            <option value="2026">2026</option>
+                            <option value="2025">2025</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
@@ -119,7 +125,8 @@
     <!-- MODAL -->
     <div id="modalInventario"
         class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-[100] flex items-center justify-center opacity-0 transition-opacity duration-300">
-        <div class="bg-white w-full max-w-md rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-4 lg:p-8">
+        <div
+            class="bg-white w-full max-w-md rounded-2xl shadow-2xl transform scale-95 transition-all duration-300 p-4 lg:p-8">
             <div class="flex justify-between items-center mb-8">
                 <div>
                     <h3 class="text-2xl font-extrabold tracking-tight" id="modalTitle">Nuevo Registro</h3>
